# proxycast

./: .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/workflows/: quality.yml  release.yml
docs/: README.md  TECH_SPEC.md
docs/aiprompts/: README.md  aster-integration.md  commands.md  components.md  content-creator.md  design-language.md  governance.md  hooks.md  services.md
docs/content/02.user-guide/: 4.configuration-example.md
docs/oem/: logo.md
docs/test/: e2e-tests.md  testing-strategy-2026.md
scripts/: report-legacy-surfaces.mjs  setup-local-aster-override.mjs  test_image_api.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/skills/: Cargo.toml
src-tauri/crates/skills/src/: lib.rs  skill_loader.rs  skill_matcher.rs
src-tauri/icons/: icon.icns
src-tauri/proptest-regressions/config/: tests.txt
src-tauri/src/: README.md  lib.rs  server.rs
src-tauri/tests/: real_web_search_policy.rs  real_web_search_preflight_short_input.rs
src/components/: AppSidebar.tsx  Dashboard.tsx  Modal.test.tsx  Modal.tsx  Sidebar.tsx  SplashScreen.tsx
src/hooks/: useProjects.ts  useProviderModels.ts  useProviderPool.ts  useSubAgentScheduler.test.tsx  useSubAgentScheduler.ts  useTauri.ts  useUnifiedChat.ts
src/lib/: appVersion.test.ts  projectView.ts  workspaceHealthTelemetry.test.ts  workspaceHealthTelemetry.ts
src/pages/: README.md  update-notification.css  update-notification.tsx
src/stores/: agentStore.ts
src/types/: chat.ts  settings.ts  workspace.ts
(+422 files in other folders)
