[package]
name = "proxycast-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
proxycast-core.workspace = true
proxycast-providers.workspace = true
proxycast-services.workspace = true
proxycast-server-utils.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
